# forkflux

./: .gitignore  .pre-commit-config.yaml  CNAME  CONTRIBUTING.md  INTEGRATION.md  Makefile  QUICK_START.md  README.md  cliff.toml  pyproject.toml
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
.github/workflows/: docker-images.yml  docs.yml  github-releases-to-discord.yml  release-api.yml  release-mcp.yml
commands/: ff-board.md  ff-change-job-status.md  ff-claim-job.md  ff-claim.md  ff-close.md  ff-create-job.md  ff-job-details.md  ff-list-available-jobs.md  ff-list-jobs.md  ff-list-roles.md  ff-push.md  ff-roles.md
docs/: .gitignore  docsearch.json  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: agent-workflows.md  api-reference.md  cli.md  commands.md  contributing.md  core-concepts.md  faq.md  getting-started.md  guides.md  intro.md  manual-setup.md  mcp-integration.md  mcp-prompts.md  plugins.md  quickstart.md  self-hosting.md  skills.md  troubleshooting.md
docs/docs/general/: agent-workflows.md  cli.md  commands.md  contributing.md  core-concepts.md  faq.md  intro.md  manual-setup.md  mcp-integration.md  mcp-prompts.md  plugins.md  quickstart.md  self-hosting.md  skills.md
docs/static/: openapi.json
etc/: Dockerfile.api  Dockerfile.mcp  compose.example.yml
plugins/claude/forkflux/.claude-plugin/: plugin.json
plugins/claude/forkflux/commands/: setup.md
rules/: forkflux.md
scripts/: export_openapi.py
skills/forkflux-receiver/: SKILL.md
skills/forkflux-sender/: SKILL.md
(+1 files in other folders)
