[project]
name = "forkflux-workspace"
version = "0.0.0"
readme = "README.md"
license = "Apache-2.0"

[tool.uv.workspace]
members = [
    "packages/*",
]

[dependency-groups]
dev = [
    "mypy==2.1.0",
    "pre-commit==4.6.0",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.18",
]

[project.urls]
Homepage = "https://github.com/forkflux/forkflux"
Repository = "https://github.com/forkflux/forkflux"
Issues = "https://github.com/forkflux/forkflux/issues"

[tool.mypy]
files = "packages"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "packages/"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "S"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"*/tests/**" = ["S101", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
